# oauth-backend

./: .env.yml.dist  .gitignore  .serverless-wsgi  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml.local
app/: main.py
app/adapters/oauth/: google_authentication_service.py  google_token_service.py  local_authentication_service.py  local_token_service.py
app/adapters/repositories/: DynamoDBAdapter.py
app/adapters/rest/: auth_controller.py  auth_serializer.py  auth_server_mock.py  exception_serializer.py
app/adapters/rest/dtos/: access_token.py  authentication_data.py  cookies.py  exceptions.py
app/adapters/service_adapters/: identity_provider_client.py
app/business_logic/: authentication_repository.py  authentication_service.py  exceptions.py  token_service.py
app/business_logic/models/: authentication.py
app/config/: config.py  on_startup.py
local-stack/: .gitignore  Dockerfile  docker-compose.yaml  stack-run.sh
tests/: conftest.py  test_utils.py
tests/data_providers/: authorization_server_provider.py  exceptions_provider.py  frontend_provider.py
tests/functional_tests/app/adapters/rest/: test_auth_controller.py  test_get_home_exceptions.py
